plugins/xpath/xpath-lang/testData/xpath/highlighting/malformedStringLiteral.xpath
<error descr="Malformed string literal">'abc</error>